# pipedbg

./: LICENSE  PRODUCTION.md  README.md  cli.py  display.py  electron-builder.yml  nodejs-ci.yml  package.json  parser.py  pyproject.toml  python-ci.yml  runner.py  test_pipedbg.py  webui.py  webui_server.py
auth/: license.py
electron/: entitlements.mac.plist  main.js  preload.js
examples/.github/workflows/: nodejs-ci.yml  python-ci.yml
examples/circleci/.circleci/: config.yml
examples/gitlab/: .gitlab-ci.yml
my-app/: .env.example  README.md  middleware.ts  package-lock.json  package.json
my-app/app/: layout.tsx
my-app/app/(dashboard)/: layout.tsx  page.tsx
my-app/app/(dashboard)/quotes/: page.tsx
my-app/app/(dashboard)/quotes/[id]/: page.tsx
my-app/app/(dashboard)/quotes/[id]/review/: page.tsx
my-app/app/(dashboard)/quotes/new/: page.tsx
my-app/app/(dashboard)/settings/: page.tsx
my-app/app/api/auth/register/: route.ts
my-app/app/api/materials/: route.ts
my-app/app/api/quotes/: route.ts
my-app/app/api/quotes/[id]/: route.ts
my-app/app/api/quotes/[id]/calculate/: route.ts
my-app/app/api/shops/: route.ts
my-app/app/api/webhooks/email/: route.ts
my-app/app/login/: page.tsx
my-app/app/register/: page.tsx
my-app/app/setup/: page.tsx
my-app/components/layout/: header.tsx  sidebar.tsx
my-app/components/quotes/: ai-extraction-review.tsx  export-buttons.tsx  line-item-table.tsx  quote-card.tsx  quote-editor.tsx  quote-list.tsx
my-app/lib/: auth.ts  email-parser.ts  excel-generator.ts  pdf-generator.ts  price-calculator.ts
my-app/prisma/: schema.prisma  seed.ts
my-app/templates/: quote-template.html
my-app/test-data/: ambiguous-rfq.txt  complex-rfq.txt  simple-rfq.txt
my-app/types/: index.ts
parsers/: base.py  github.py
pipedbg/: __init__.py  ai.py  cli.py  display.py  runner.py
pipedbg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipedbg/auth/: __init__.py  gate.py  limits.py
pipedbg/parsers/: __init__.py  circleci.py  detect.py  gitlab.py
pipedbg/web/: session.py
pipedbg/web/static/: app.js  index.html
tests/: test_auth.py  test_pipedbg.py  test_web.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: breakpointManager.ts  debugSession.ts  extension.ts  pipelineProvider.ts  statusBar.ts  terminal.ts
web/: __init__.py  app.js  index.html  server.py  share.py  styles.css
web/static/: style.css
(+3 files in other folders)
